# PyCALI

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile_old  OPTIONS  README.rst  example.py  example_mock.py  main.cpp  mathfun.c  mathfun.h  param.txt  plot_for_cali.py  pyproject.toml  setup.py  utilities.cpp  utilities.hpp  wrapper.cpp
cdnest/: dnest.c  dnestpostprocess.c  dnestvars.c  dnestvars.h
data/: ngc5548_cont.txt  ngc5548_line.txt  plot_results.py
docs/: .readthedocs.yaml  conf.py  faq.rst  getting_started.rst  index.rst  intercali.rst  test.rst  tutorial.rst  usage.rst
src/: CMakeLists.txt  utilities.cpp  utilities.hpp
src/cdnest/: CMakeLists.txt  dnestvars.c  dnestvars.h
src/pycali/: CMakeLists.txt  __init__.py  format_pycali.py  gen_mock.py  plot_results.py  test.py
src/pycali/cblas/: cblas_srcs.txt  ddotsub.f
src/pycali/cdnest/: dnest.c  dnestpostprocess.c  dnestvars.c  dnestvars.h  progress-bar.c  progress-bar.h
src/pycali/lapacke/: lapacke_srcs.txt
src/pycali/pycali/: CMakeLists.txt  main.cpp  mathfun.c  mathfun.h  utilities.cpp  utilities.hpp  wrapper.cpp
tests/: tests_mrk335.ipynb  tests_mrk335.py
tests/cali/: param.txt  param_new.txt  tests_mrk335.ipynb
tests/pycali/: Mrk335_asas.csv  Mrk335_ztf.csv  tests_mrk335.ipynb  tests_mrk335.py
